--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ github.another_url }}" class="btn">My Projects</a>
-        <a href="{{ github.zip_url }}" class="btn">AP CS A Units</a>
+        <a href="/APCSAUnits/" class="btn">AP CS A Units</a>
         <a href="{{ github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
