--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ github.another_url }}" class="btn">My Projects</a>
+        <a href="{{ site.github.another_url }}" class="btn">My Projects</a>
         <a href="/APCSAUnits/" class="btn">AP CS A Units</a>
-        <a href="{{ github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ github.tar_url }}" class="btn">Download .tar.gz</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
 
