--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.another_url }}" class="btn">My Projects</a>
+        <a href="/MyProjects/" class="btn">My Projects</a>
         <a href="/APCSAUnits/" class="btn">AP CS A Units</a>
         
        
